<resources>
    <string name="app_name">Paul One</string>
    <string name="MAPS_API_KEY">AIzaSyD4wDzESIHuVLPC6XJJ-7WQ3k3pIy_7qfM</string>
    <string name="powered_by">Powered By</string>
    <string name="track_your_dues_and_bills">Track your dues and bills like never before. We bring punctuality in your life</string>
    <string name="next">Next</string>
    <string name="your_payment_checklist">Your payment checklist  </string>
    <string name="sorted"> sorted</string>
    <string name="payment_is_equal">Payment = </string>
    <string name="rewards"> Rewards</string>
    <string name="register_all_the_detail">Register all the details here and we make sure you don’t miss out on any payments.</string>
    <string name="we_dont_just_ask">We don’t just ask for money. Claim amazing rewards by being a punctual customer </string>
    <string name="proceed">Proceed</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="welocome_to_paul_gold">Welcome to Paul One,\n we are happy to serve you!!</string>
    <string name="please_enter_phone">Please enter your phone number</string>
    <string name="str_91">+91</string>
    <string name="please_fill_the_otp">Please fill the OTP sent to the given number</string>
    <string name="change_q"><u>CHANGE?</u></string>
    <string name="give_us_some">Give us some moment to verify few things. Much appreciated.</string>
    <string name="verify">VERIFY</string>
    <string name="verifying">Verifying</string>
    <string name="verified">Verified</string>
    <string name="please_create_a_acc">Please create an account before we proceed.</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email ID</string>
    <string name="set_up_mpin">Set Up a M-Pin</string>
    <string name="by_creating_the_account">By creating the account, I accept to the</string>
    <string name="sign_up">Sign Up</string>
    <string name="cont_with_google">Continue with google</string>
    <string name="already_have_an_acc">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="this_may_take_some">This may take up sometime, but please bear with</string>
    <string name="us">us!</string>
    <string name="signup_via_g">Sign up via google</string>
    <string name="successfull">successful!</string>
    <string name="we_beleive_in">We believe in</string>
    <string name="security">security.</string>
    <string name="please_cr_mpin">Please create a</string>
    <string name="m_pin">M-pin</string>
    <string name="for_u">for you</string>
    <string name="conf_the_mpin">Confirm new M-Pin</string>
    <string name="conf_mpin">Confirm M-Pin</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_cap">CONFIRM</string>
    <string name="finally_done_sighup">And we are finally done, welcome home user. We are glad to have you with us.</string>
    <string name="bills_amp_more"><font size="10"><![CDATA[BILLS & MORE]]></font></string>
    <string name="gold_loan"><font size="10">GOLD LOAN</font></string>
    <string name="home"><font size="10">HOME</font></string>
    <string name="locate_us"><font size="10">LOCATE US</font></string>
    <string name="menu"><font size="10">MENU</font></string>
    <string name="search_for_loans">Search for “Loans”</string>
    <string name="be_a_loyal_payer_">(Be a loyal payer and keep no dues)</string>
    <string name="dth_services">DTH SERVICES</string>
    <string name="electricity">ELECTRICITY</string>
    <string name="broadband">BROADBAND</string>
    <string name="mobile">MOBILE</string>
    <string name="mobile_recharge">MOBILE RECHARGE</string>
    <string name="mobile_postpaid">MOBILE POSTPAID</string>
    <string name="home_sweet_home_bills">Home sweet Home bills</string>
    <string name="cabletv">CABLE TV</string>
    <string name="landline">LANDLINE</string>
    <string name="water">WATER</string>
    <string name="homerent">HOME RENT</string>
    <string name="gas_pipline">GAS PIPELINE</string>
    <string name="apartment">APARTMENT</string>
    <string name="gas_cylinder">GAS CYLINDER</string>
    <string name="education">EDUCATION</string>
    <string name="financial_security">Financial Security</string>
    <string name="insurance">INSURANCE</string>
    <string name="muncipal_tex">MUNICIPAL TAX</string>
    <string name="transit_window">Transit Window</string>
    <string name="fastag">FASTag</string>
    <string name="challan">CHALLAN</string>
    <string name="metrocard">METRO CARD</string>
    <string name="back">BACK</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="search_fr_bills">Search for “Bills“</string>
    <string name="search_fr_credit">Search for “Credit Card”</string>
    <string name="search_fr_upcoming_dues">Search for “upcoming dues”</string>
    <string name="ott_world">OTT World</string>
    <string name="your_cards">YOUR CARDS</string>
    <string name="you_wont_lose_them_from_here">(You wont lose them from here)</string>
    <string name="prepaid_card">PREPAID CARD</string>
    <string name="view_under_line"><u>View</u></string>
    <string name="view">View</string>
    <string name="loan_overview">LOAN OVERVIEW</string>
    <string name="overview">OverView:</string>
    <string name="search_for_specific_loans">Search for the specific loans</string>
    <string name="you_have_taken_up_4_act">You have taken up X active loan, and the interest due is up to INR XXXXXX</string>
    <string name="open_loans">Open Loans</string>
    <string name="closed_loans">Closed Loans</string>
    <string name="view_details">VIEW DETAILS</string>
    <string name="loan_closed">LOAN CLOSED</string>
    <string name="services">Services</string>
    <string name="transaction">Transactions</string>
    <string name="settings">Settings</string>
    <string name="loan_renewed">Loans Renewal</string>
    <string name="recharge">Recharges</string>
    <string name="other_bills">Other Bills</string>
    <string name="other_emis">Other EMI’s</string>
    <string name="other_emi_pay">Others EMI payments</string>
    <string name="others">Others</string>
    <string name="credit_score">Credit Score</string>
    <string name="credit_score_caps">CREDIT SCORE</string>
    <string name="one_place_for_everything">(One place for everything)</string>
    <string name="pay_bill_point_desc">*Pay bills and more to win \nPaul Points and get exciting offers.</string>
    <string name="search_yr_transac">Search your transactions</string>
    <string name="pay_modes">PAYMENT MODES</string>
    <string name="history">History</string>
    <string name="view_trans">View Transactions</string>
    <string name="bank_acc">Bank Accounts</string>
    <string name="upi_setting">UPI Settings</string>
    <string name="card_setting">Card Settings</string>
    <string name="acc_sett">Account Settings</string>
    <string name="man_yr_Account">Account Settings</string>
    <string name="add_or_mange_add">Add or manage addresses</string>
    <string name="all_abt_us">All about us</string>
    <string name="wht_we_r">What are we?</string>
    <string name="our_priv_policy">Our Privacy policy</string>
    <string name="we_beleive_in_sec">We believe in security</string>
    <string name="termNCondn"><![CDATA[Terms & Conditions]]></string>
    <string name="faqs">FAQ\'s</string>
    <string name="patience_is_the_key_to_a_healthy">Patience is the key to a healthy life. Rewards coming soon!!</string>
    <string name="view_card">View Card</string>
    <string name="please_verify_to_access_your_card_details">Please verify to access your\n card details</string>
    <string name="select_your_bank_lender">Select your Bank/Lender</string>
    <string name="type_of_loan">Type of Loan</string>
    <string name="enter_your_loan_account_number">Enter your Loan Account Number</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="enter_your_credit_card_number">Enter your Credit Card Number</string>
    <string name="emi_to_be_paid">EMI to be paid</string>
    <string name="your_bank_lender">Your bank/Lender</string>
    <string name="your_account_number">Your Account Number</string>
    <string name="bill_date">Bill Date</string>
    <string name="bill_period">Bill Period</string>
    <string name="bill_number">Bill Number</string>
    <string name="due_date">Due Date</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="customer_convenience_fees">Customer Convenience Fees</string>
    <string name="total_amount">Total Amount</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="your_bank_lender_name">Your Bank/Lender Name</string>
    <string name="account_number">Account Number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="personal_information">Personal Information</string>
    <string name="change_profile_picture"><u>Change profile picture</u></string>
    <string name="change"><u>(Change?)</u></string>
    <string name="change_underln"><u>Change</u></string>
    <string name="pan_card">Pan Card</string>
    <string name="address">Address</string>
    <string name="please_add_your_address_here">Please add your address here</string>
    <string name="please_enter_your_pan_number_here">Please enter your pan number here</string>
    <string name="reset_yr_pin">Reset your  M-Pin</string>
    <string name="curr_mpin">Current M-Pin</string>
    <string name="new_mpin">New M-Pin</string>
    <string name="pay_now_and_win_">Pay now and win exciting offers and gold points!!</string>
    <string name="prepaid_card_">Prepaid card</string>
    <string name="preferred_modes">Preferred Modes</string>
    <string name="amount_to_be_paid">Amount to be paid</string>
    <string name="add_new_upi"><u> Add New Upi </u></string>
    <string name="upi">UPI</string>
    <string name="check_bal">Check Balance</string>
    <string name="check_bal_under"><u>Check Balance</u></string>
    <string name="payment_confirmed">PAYMENT CONFIRMED!!</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="view_loan_state">View Loans statement</string>
    <string name="download_receipt"><u>Download receipt</u></string>
    <string name="prepaid_cards">PREPAID CARDS</string>
    <string name="wallet">WALLET</string>
    <string name="add_new_card"><u>Add new card</u></string>
    <string name="checkout">CHECKOUT</string>
    <string name="please_add_a_debit_crre">Please add a Debit/Credit card to your account to see it here and make changes whenever you want</string>
    <string name="add_a_card">Add a card</string>
    <string name="name_as_per_card">Name as per card</string>
    <string name="card_num">Card Number</string>
    <string name="expdatehint">Expiry Date (MM/YY)</string>
    <string name="cvv">CVV</string>
    <string name="transaction_reference_id">Transaction Reference ID</string>
    <string name="or">or</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="your_phone_number">Your phone Number</string>
    <string name="for_prepaid_card_ending_with_xxxx_2109">For prepaid card ending with xxxx 2109</string>
    <string name="u20b9500">+ ₹500</string>
    <string name="u20b91000">+ ₹1000</string>
    <string name="u20b91500">+ ₹1500</string>
    <string name="go_to_payment">Go to Payment</string>
    <string name="creating_strokes_of_innovation_nand_insight">Creating strokes of innovation\nand insight</string>
    <string name="stay_tuned">Stay Tuned!</string>
    <string name="_00_00">00:00</string>
    <string name="_88_00">88:88</string>
    <string name="maintenance_image">Maintenance image</string>
</resources>