<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/screen_start_margin"
    android:paddingEnd="@dimen/screen_end_margin">

    <TextView
        android:id="@+id/textView3"
        style="@style/text_16_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/loan_overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:srcCompat="@drawable/back_navigate_btn" />

    <TextView
        android:id="@+id/lonOverDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/you_have_taken_up_4_act"
        android:textColor="@color/splash_screen_three"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <TextView
        android:id="@+id/textView5"
        style="@style/text_10_semi_bold_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="17dp"
        android:paddingTop="7dp"
        android:paddingEnd="17dp"
        android:paddingBottom="7dp"
        android:text="@string/open_loans"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lonOverDesc" />

    <TextView
        android:id="@+id/textView6"
        style="@style/text_10_semi_bold_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@drawable/rec_sky_loan_blue_solid"
        android:paddingStart="17dp"
        android:paddingTop="7dp"
        android:paddingEnd="17dp"
        android:paddingBottom="7dp"
        android:text="@string/closed_loans"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <EditText
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rec_search_"
        android:drawableStart="@drawable/search"
        android:drawablePadding="14dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:hint="@string/search_for_specific_loans"
        android:imeOptions="actionSearch"
        android:maxLines="1"
        android:paddingStart="@dimen/ten_dp"
        android:paddingEnd="@dimen/ten_dp"
        android:textColor="@color/splash_screen_one"
        android:textColorHint="@color/brown"
        android:textCursorDrawable="@drawable/custom_edit_text_cursor"
        android:textSize="16sp"
        app:autoShowKeyboard="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:queryHint="@string/search"
        app:searchIcon="@drawable/search" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:itemCount="5"
        tools:listitem="@layout/item_loans_over_view"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />
</androidx.constraintlayout.widget.ConstraintLayout>