<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp">

    <ImageView
        android:id="@+id/maintenance_image"
        android:layout_width="0dp"
        android:layout_height="@dimen/_250sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_80sdp"
        android:contentDescription="@string/maintenance_image"

        android:src="@drawable/maintenance_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/timerTextViewBg"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_60sdp"
        android:layout_gravity="center"
        android:layout_marginTop="-160dp"

        android:background="@drawable/bg_round_corner_timer"
        android:fontFamily="@font/digital_mono"
        android:fontFeatureSettings="tnum"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_6sdp"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/_88_00"
        android:textAlignment="center"
        android:textColor="@color/grey_maintenance"
        android:textSize="@dimen/_50ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maintenance_image" />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_60sdp"
        android:layout_gravity="center"
        android:paddingHorizontal="@dimen/_6sdp"
        android:layout_marginTop="-160dp"
        android:fontFamily="@font/digital_mono"
        android:fontFeatureSettings="tnum"
        android:gravity="center"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/_00_00"
        android:textAlignment="center"
        android:textColor="@color/green_maintenance"
        android:textSize="@dimen/_50ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maintenance_image" />

    <TextView
        android:id="@+id/stayTunedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_36sdp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/stay_tuned"
        android:textColor="@color/stay_tuned"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/maintenance_image" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/creating_strokes_of_innovation_nand_insight"
        android:textColor="@color/grey_color"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stayTunedTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>
