<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_screen_two"
    >

    <include
        android:id="@+id/header_transDetail"
        layout="@layout/header_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/transReferIdTv"
        style="@style/text_11_medium_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/transaction_reference_id"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_transDetail" />


    <EditText
        android:id="@+id/referIdEt"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_text_rect"
        style="@style/text_11_semi_bold_black"
        android:paddingStart="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/transReferIdTv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/orTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/text_color"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/referIdEt" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/phnNoTv"
        style="@style/text_11_medium_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/your_phone_number"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orTv" />


    <EditText
        android:id="@+id/phnNoEt"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_text_rect"
        style="@style/text_11_semi_bold_black"
        android:paddingStart="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/phnNoTv" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/startDateTv"
        style="@style/text_11_medium_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/start_date"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phnNoEt" />


    <EditText
        android:id="@+id/startDateEt"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginHorizontal="20dp"
        style="@style/text_11_semi_bold_black"
        android:paddingStart="6dp"
        android:background="@drawable/edit_text_rect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/startDateTv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/endDateTv"
        style="@style/text_11_medium_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/end_date"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDateEt" />


    <EditText
        android:id="@+id/endDateEt"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_text_rect"
        style="@style/text_11_semi_bold_black"
        android:paddingStart="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/endDateTv" />

    <TextView

        android:id="@+id/proceedBtn"
        style="@style/text_12_bold_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/rec_one_blue_btn"
        android:paddingHorizontal="60dp"
        android:paddingVertical="10dp"
        android:text="@string/view"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDateEt" />


</androidx.constraintlayout.widget.ConstraintLayout>