<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/recharge_header"
        layout="@layout/header_layout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView13"
        style="@style/text_12_poppins_medium_sky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:text="@string/for_prepaid_card_ending_with_xxxx_2109"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recharge_header" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView20"
        style="@style/text_12_poppins_medium_sky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_start_margin"
        android:layout_marginTop="@dimen/_22sdp"
        android:text="Enter the Recharge Amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView13" />

    <EditText
        android:id="@+id/rechargeAmount"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_27sdp"
        android:background="@drawable/edit_text_rect"
        android:layout_marginHorizontal="@dimen/screen_start_margin"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="\u20B9 XXX"
        style="@style/text_11_semi_bold_black"
        android:textColor="@color/black"
        android:textColorHint="@color/text_color_gray"
        android:paddingStart="@dimen/_8sdp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView20" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_start_margin"
        android:layout_marginTop="@dimen/screen_start_margin"
        android:background="@drawable/edit_text_rect"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_3sdp"
        android:text="@string/u20b9500"
        style="@style/text_11_semi_bold_black"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="@+id/rechargeAmount"
        app:layout_constraintTop_toBottomOf="@+id/rechargeAmount" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/screen_start_margin"
        android:background="@drawable/edit_text_rect"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_3sdp"
        android:text="@string/u20b91000"
        style="@style/text_11_semi_bold_black"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toStartOf="@+id/materialTextView23"
        app:layout_constraintStart_toEndOf="@+id/materialTextView21"
        app:layout_constraintTop_toBottomOf="@+id/rechargeAmount" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/screen_start_margin"
        android:layout_marginEnd="@dimen/screen_start_margin"
        android:background="@drawable/edit_text_rect"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_3sdp"
        style="@style/text_11_semi_bold_black"
        android:textColor="@color/grey"
        android:text="@string/u20b91500"
        app:layout_constraintEnd_toEndOf="@+id/rechargeAmount"
        app:layout_constraintTop_toBottomOf="@+id/rechargeAmount" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/goToPaymentParent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_75sdp"
        android:background="@color/pg_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/paymentBtn"
            style="@style/text_12_semi_bold_sky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/splash_screen_one"
            android:paddingStart="@dimen/_58sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_58sdp"
            android:paddingBottom="@dimen/_16sdp"
            android:text="@string/go_to_payment"
            android:textColor="@color/yellow_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>